...
                      ],
                    ),
                    trailing: Row(
                      mainAxisSize: MainAxisSize.min,
                      children: [
                        IconButton(
                          key: Key("Edit"),
                          icon: Icon(Icons.edit),
                          onPressed: () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) => BestellungDetailsWidget(
...
                                      backend: Backend(),
                                      client: widget._client)),
                            );
                          },
                        ),
                        IconButton(
                          key: Key("Delete"),
                          icon: Icon(Icons.delete),
                          onPressed: () async {
                            try {
                              await widget._backend.deleteBestellung(
                                  widget._client, bestellung.id);
                              setState(() {
...
