...
                  Text('${widget.cart.calculateTotal().toStringAsFixed(2)} €'),
                ],
              ),
            ),
            SizedBox(height: 20),
            ElevatedButton(
              key: Key("Bestellung aufgeben"),
              onPressed: () async {
                var dateTimeNow = DateTime.now();
                String formattedDate =
                    DateFormat('yyyy-MM-dd – kk:mm').format(dateTimeNow);

                try {
...
