...
        child: Container(
          width: double.infinity,
          color: Colors.black,
          child: Padding(
            padding: const EdgeInsets.symmetric(vertical: 16.0),
            child: TextButton(
              key: Key("Add"),
              onPressed: () {
                // Erstellen einer neuen Pizza-Instanz mit den ausgewählten Zutaten
                final pizzaMitZutaten = Pizza(
                  id: widget.pizza.id,
                  name: widget.pizza.name,
                  beschreibung: widget.pizza.beschreibung,
...
